# quillcache

./: .gitignore  Cargo.toml  README.md  typos.toml
.github/workflows/: ci.yml
benches/: jit_micro.rs  tpch.rs
bridge/: quillcache_client.py  quillcache_store_client.py  quillcache_v1_connector.py  vllm_quillcache_connector.py
crates/quill-core/src/: database.rs
crates/quill-df/src/: compiler.rs  exec.rs  expr.rs  extract.rs  lib.rs  rule.rs
crates/quill-jit/src/: lib.rs  spec.rs
crates/quill-jit/src/dialect/: mod.rs
crates/quill-jit/src/fusion/: lowering.rs  mod.rs  pattern.rs  registry.rs
crates/quill-jit/src/mlir/: compiled.rs  dispatch.rs  emit.rs  lower.rs  mod.rs  tests.rs
crates/quill-mlir/cpp/lib/: Passes.cpp
crates/quill-plan/src/: graph.rs  lib.rs
crates/quill-runtime/src/: array.rs  group.rs  kernel.rs  lib.rs  sum.rs  tests.rs  value.rs
crates/quillcache-control/: Cargo.toml
crates/quillcache-control/src/: lib.rs
crates/quillcache-core/: Cargo.toml
crates/quillcache-core/src/: bench.rs  conductor.rs  control.rs  index_holt.rs  index_rocksdb.rs  lib.rs  replication.rs  router.rs
crates/quillcache-cuda/: Cargo.toml
crates/quillcache-cuda/src/: gpu.rs  gpu_stub.rs  kernels.cu  lib.rs
crates/quillcache-gateway/: Cargo.toml
crates/quillcache-gateway/src/: lib.rs
crates/quillcache-index-holt/: Cargo.toml
crates/quillcache-index-holt/src/: lib.rs
crates/quillcache-index-rocksdb/: Cargo.toml
crates/quillcache-index-rocksdb/src/: lib.rs
crates/quillcache-master/: Cargo.toml
crates/quillcache-master/src/: lib.rs
crates/quillcache-master/tests/: distributed_pool.rs
crates/quillcache-router/: Cargo.toml
crates/quillcache-router/src/: lib.rs
crates/quillcache-sim/: Cargo.toml
crates/quillcache-sim/src/: disagg.rs  index_bench.rs  lib.rs  tiered.rs
crates/quillcache-store/: Cargo.toml
crates/quillcache-store/src/: lib.rs  transfer.rs
crates/quillcache-transfer/: Cargo.toml
crates/quillcache-transfer-engine/: Cargo.toml
crates/quillcache-transfer-engine/src/: device_segment.rs  engine.rs  lib.rs  metadata.rs  metadata_etcd.rs  multi_transport.rs  slice_pool.rs  topology.rs  transport.rs
crates/quillcache-transfer-engine/src/transport/: nvlink.rs  rdma.rs  tcp.rs
crates/quillcache-transfer/src/: lib.rs
deploy/: modal_cuda_verify.py  modal_vllm.py
docs/: architecture.md  co-scheduler-design.md  experiments.md  index-backends.md  interview-prep.md  m3-real-vllm.md  mvp-runbook.md  platform-plan.md  positioning.md  real-engine-pool.md  references.md  research-agenda.md  transfer-line-design.md
docs/src/: architecture.md  benchmarks.md
docs/src/modules/: overview.md
examples/: quillcache-gateway.yaml  quillcache-mixed-fleet.yaml
scripts/: vllm_kv_events_bridge.py
src/: cluster.rs  gateway.rs  main.rs  master_http.rs  node.rs  store_master_http.rs  transfer_node.rs
tests/: df_arrow_parquet.rs
web/src/content/docs/: reference-mapping.md
