[workspace]
members = [
    ".",
    "crates/quillcache-control",
    "crates/quillcache-core",
    "crates/quillcache-gateway",
    "crates/quillcache-router",
    "crates/quillcache-sim",
]
default-members = [
    ".",
    "crates/quillcache-control",
    "crates/quillcache-core",
    "crates/quillcache-gateway",
    "crates/quillcache-router",
    "crates/quillcache-sim",
]
resolver = "2"

[workspace.dependencies]
axum = "0.8"
clap = { version = "4.5.23", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0.12"
tokio = { version = "1.42", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package]
name = "quillcache"
version = "0.1.0"
edition = "2021"
description = "Research prototype for an inference state plane and distributed KV cache manager"
license = "MIT"
repository = "https://github.com/feichai0017/quillcache"
readme = "README.md"

[dependencies]
clap = { workspace = true }
quillcache-core = { version = "0.1.0", path = "crates/quillcache-core" }
quillcache-gateway = { version = "0.1.0", path = "crates/quillcache-gateway" }
quillcache-router = { version = "0.1.0", path = "crates/quillcache-router" }
quillcache-sim = { version = "0.1.0", path = "crates/quillcache-sim" }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
