[workspace]
members = [
    ".",
    "crates/quillcache-core",
    "crates/quillcache-store",
    "crates/quillcache-transfer-engine",
    "crates/quillcache-index-rocksdb",
    "crates/quillcache-index-holt",
]
default-members = [
    ".",
    "crates/quillcache-core",
    "crates/quillcache-store",
    "crates/quillcache-transfer-engine",
    "crates/quillcache-index-holt",
]
# The CUDA device tier is excluded so the default build never resolves/compiles
# cudarc on a machine with no NVIDIA GPU. Build it standalone on a GPU box:
#   cd crates/quillcache-cuda && cargo build --features cuda
exclude = ["crates/quillcache-cuda"]
resolver = "2"

[workspace.dependencies]
axum = "0.8"
clap = { version = "4.5.23", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0.12"
tokio = { version = "1.42", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package]
name = "quillcache"
version = "1.0.0-alpha.1"
edition = "2021"
description = "Vendor-neutral KV cache control plane and evaluation platform for LLM serving"
license = "MIT"
repository = "https://github.com/feichai0017/quillcache"
readme = "README.md"
keywords = ["llm", "kv-cache", "inference", "serving", "control-plane"]
categories = ["caching", "development-tools"]

[dependencies]
clap = { workspace = true }
axum = { workspace = true }
bytes = "1"
futures-util = "0.3"
reqwest = { workspace = true }
quillcache-core = { version = "1.0.0-alpha.1", path = "crates/quillcache-core" }
quillcache-store = { version = "1.0.0-alpha.1", path = "crates/quillcache-store" }
quillcache-index-rocksdb = { version = "1.0.0-alpha.1", path = "crates/quillcache-index-rocksdb", optional = true }
quillcache-index-holt = { version = "1.0.0-alpha.1", path = "crates/quillcache-index-holt", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
# Optional RocksDB (LSM) index backend. Off by default so `cargo install
# quillcache` stays light and the core CI job needs no C++/libclang toolchain.
rocksdb = ["dep:quillcache-index-rocksdb"]
# Optional Holt (persistent ART) index backend. Pure Rust; off by default to keep
# the installed binary minimal. Also lets the online gateway back its residency
# index with Holt (`index: holt` in the gateway config).
holt = ["dep:quillcache-index-holt"]
