[package]
name = "quillcache-cuda"
version = "1.0.0-alpha.1"
edition = "2021"
description = "CUDA device tier for QuillCache: GPU HBM <-> host KV block copies + FP8 quantize-on-offload (feature-gated)"
license = "MIT"
repository = "https://github.com/feichai0017/quillcache"

# NOTE: this crate is intentionally EXCLUDED from the workspace (see the root
# Cargo.toml `exclude`) so the default build/test on a machine with no NVIDIA GPU
# never resolves or compiles `cudarc`. Build it on a GPU box:
#     cd crates/quillcache-cuda && cargo build --features cuda

[dependencies]
quillcache-core = { version = "1.0.0-alpha.1", path = "../quillcache-core" }
bytes = "1"
cudarc = { version = "0.12", optional = true }

[features]
default = []
# Real CUDA device tier. Needs the CUDA toolkit + an NVIDIA GPU at build/run time.
cuda = ["dep:cudarc"]

[workspace]
