[package]
name = "quillcache-transfer-engine"
version = "1.0.0-alpha.1"
edition = "2021"
description = "Faithful Rust port of Mooncake's Transfer Engine: TransferEngine facade + MultiTransport + Transport backends (TCP real, RDMA/NVMe-oF/GPU reserved) + TransferMetadata + Topology; one-sided (segment, offset) transfers between registered memory"
license = "MIT"
repository = "https://github.com/feichai0017/quillcache"

[dependencies]
async-trait = "0.1"
bytes = "1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "rt"] }
etcd-client = { version = "0.14", optional = true }

[features]
# RDMA / GPU transport backends (ibverbs / GPUDirect-RDMA / NVLink). Reserved
# seams — implemented as Unsupported stubs until the hardware is wired.
rdma = []
nvlink = []
# etcd-backed metadata (Mooncake's etcd:// MetadataStoragePlugin) — the production
# distributed metadata path. Off by default; needs a running etcd cluster (like
# `rdma` needs a NIC). Pulls etcd-client (gRPC over tonic).
etcd = ["dep:etcd-client"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
